updated bottom bar

--- a/googletesthtml.html
+++ b/googletesthtml.html
@@ -34,21 +34,32 @@
 
 
 
-<div class="footers">
-	<div class="topbar">
+<div class="footer-bars">
+	<div class="t-bar">
 		<ul>
-			<li><a href="#">United Kingdom</a></li>
+			<li class="tbar"><a href="#">United Kingdom</a></li>
 		</ul>
 	</div>
+
+
+
+	<div class="b-bar-left">
+		<ul>
+			<li class="bbar"><a href="#">Advertising</a></li>
+			<li class="bbar"><a href="#">Business</a></li>	
+			<li class="bbarr"><a href="#">Privacy</a></li>	
+			<li class="bbarr"><a href="#">Terms</a></li>	
+			<li class="bbarr"><a href="#">Settings</a></li>	
+
+
+
+		</ul>
+	</div>	
+
+
 </div>
 
-<div class="footers2">
-	<div class="botbar">
-		<ul>
-			<li><a href="#">Advertising</a></li>
-			<li><a href="#">Business</a></li>
-		</ul>
-	</div>
+
 </div>
 </body>
 </html>
