--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta content="origin" name="referrer">
 	<title>GoogleClone</title>
-	<link href="googletest.css" rel="stylesheet" type="text/css">
+	<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 		
